# gtpsa-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  README.rst  Todo.md  install.rst
.github/workflows/: build_and_test_ubuntu_latest.yml  cmake-single-platform.yml  orchestration.yml  pypi_publish.yml  python-build.yml  ubuntu-deb-package.yml
.github/workflows/composite-action/python-build/: action.yml
.github/workflows/composite-action/ubuntu-deb-package/: action.yml
c/: CMakeLists.txt
c++/: CMakeLists.txt  gtpsa.hpp  gtpsa_desc.hpp  gtpsa_forward_decl.hpp  gtpsa_funcs.h  ss_vect.h
c++/cmake/: gtpsa-c++Config.cmake.in
c++/gtpsa/: bridge.hpp  bridge_container.hpp  common.tpp  ctpsa.cc  ctpsa.hpp  ctpsa_complex_variant.hpp  desc.cc  desc.hpp  forward_decl.hpp  forward_decl.tpp  funcs.h  gtpsa.cc  gtpsa.tcc  gtpsa_base_variant.hpp  gtpsa_container.hpp  gtpsa_double_variant.tpp  lielib.cc  lielib.hpp  mad_ctpsa_wrapper.cc  mad_ctpsa_wrapper.hpp  mad_gtpsa_container_wrapper.tpp  mad_gtpsa_wrapper.tpp  mad_tpsa_wrapper.cc  mad_tpsa_wrapper.hpp  moments.cc  operators_container.h  ss_vect.cc  ss_vect.h  templated_funcs.hpp  test.cc  test2.cc  tpsa.cc  tpsa.hpp  tpsa_double_variant.hpp  utils.hpp  utils_tps.hpp  variant_forward_decl.hpp  with_operators.hpp  with_operators.tpp  with_operators_funcs.hpp  (+1 more)
c++/gtpsa/bak/: common.hpp  forward_decl_ctpsa.hpp  mgr.hpp
c++/gtpsa/bridge/: bridge.hpp  container.hpp
c++/gtpsa/intern/: complex_utils.hpp  gtpsa_container.hpp  templated_funcs.hpp  with_operators.hpp  with_operators_funcs.hpp
c++/gtpsa/mad/: container_wrapper.tpp  ctpsa_wrapper.cc  ctpsa_wrapper.hpp  forward_decl.hpp  tpsa_wrapper.cc  tpsa_wrapper.hpp  wrapper.tpp
c++/gtpsa/python/: name_index.cc  name_index.h  objects_with_named_index.h
c/cmake/: gtpsa.cmake.in
contrib/: postinst.in
doc/source/: conf.py  index.rst
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  README.rst
examples/c++/: CMakeLists.txt  a_mul.cc  gtpsa_ex0.cc  gtpsa_ex1.cc  gtpsa_ex2.cc  gtpsa_ex3.cc  gtpsa_ex4.cc  gtpsa_ex5.cc  gtpsa_ex6.cc  set_identity.cc  space_state.cc
python/: BUGS.rst  CMakeLists.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/examples/: complex.py  gtpsa_ex1.py  state_space_gtpsa.py  tpsa.py  variant.py
python/gtpsa/: __init__.py  named_index.py  utils.py  utils_df.py
python/src/: arma.cc  desc.cc  gtpsa.cc  gtpsa_delegator.h  gtpsa_module.cc  gtpsa_module.h  gtpsa_variant.cc  gtpsa_variant_test_module.cc  gtpsa_wrapper.h  named_index.cc  named_index.h  objects_with_named_index.h  ss_vect.cc
python/tests/: idenity_matrix.py  test_arithmetric.py  test_export_to_dataframe.py  test_gtpsa.py  test_index_mapping.py  test_ss_vect.py
src/: CMakeLists.txt  version.c  version.h
src/c/: CMakeLists.txt
src/c++/: CMakeLists.txt
src/c++/gtpsa/: ctpsa.cc  ctpsa.hpp  desc.cc  desc.hpp  funcs.h  gtpsa_base_variant.hpp  lielib.hpp  ss_vect.cc  ss_vect.h  tpsa.hpp  tpsa_double_variant.hpp  utils.hpp  utils_tps.hpp
src/c++/gtpsa/bridge/: bridge.hpp  container.hpp
src/c++/gtpsa/intern/: complex_utils.hpp  gtpsa_container.hpp  with_operators.cpp  with_operators.hpp  with_operators_funcs.hpp
src/c++/gtpsa/mad/: container_wrapper.tpp  ctpsa_wrapper.hpp  forward_decl.hpp  tpsa_wrapper.hpp  utils.hpp  wrapper.tpp
src/c++/gtpsa/python/: name_index.cc  name_index.h  objects_with_named_index.h  utils.h
src/cmake/: gtpsaConfig.cmake.in
tests/c/: CMakeLists.txt  test_desc_double_allocate.c  test_desc_many_pars.c
tests/c++/: CMakeLists.txt  ss_vect_compose.cpp  test_arithmetic.cc  test_bridge_container.cpp  test_complex_arithmetic.cc  test_consistency.cc  test_container.cpp  test_ctpsa.cc  test_ctpsa_variant.cc  test_desc.cc  test_mad_wrapper_container.cpp  test_ss_vect.cc  test_template.cc  test_tpsa.cc  test_tpsa_variant.cc
