# -*- coding: utf-8 -*-

[metadata]
name = gtpsa
version = 0.0.0
url = https://github.com/hz-b/gtpsa-c++/
author = Pierre Schnizer
author_email = pierre.schnizer@helmholtz-berlin.de
license = GPL
description = wraps gtpsa as provided by madng
# long_description = file: ../README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools
